--- a/HouseSales/app/src/main/res/values/strings.xml
+++ b/HouseSales/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="nav_header_title">Агенство "Домовёнок"</string>
     <string name="nav_header_subtitle">Здесь вы можете купить себе дом (и домовёнка в придачу!)</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Информация</string>
+    <string name="action_add">Добавить запись</string>
 
     <string name="menu_home">Каталог домов</string>
     <string name="menu_gallery">Купленные дома</string>
